# Expense_tracker

./: .dockerignore  .gitignore  LICENCE  docker-compose.yml  dockerfile  main.py  pyproject.toml
src/: container.py
src/application/dto/: expense_dto.py
src/application/services/: category_analysis_service.py  date_filter_service.py  expense_analyzer.py  intent_service.py  monthly_comparison_service.py  monthly_report_service.py  report_formatter.py
src/application/use_cases/: add_expense.py  agent_chat.py  analyze_expenses.py  compare_months.py  get_expenses.py  get_last_month_report.py  get_monthly_report.py  get_recent_expenses.py  get_summary.py
src/domain/constants/: categories.py
src/domain/entities/: expense.py
src/domain/repositories/: expense_repository.py
src/infrastructure/firebase/: firebase_client.py  firestore_repository.py
src/infrastructure/ollama/: ollama_service.py
src/infrastructure/postgres/: database.py  models.py  postgres_repository.py
src/infrastructure/telegram/: bot.py
src/presentation/api/: analytics_routes.py  expense_routes.py  health_routes.py  summary_routes.py
