[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "firebase-admin>=7.4.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
